--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Spring Authorization Server</title>
+    <title>Local Authorization Server</title>
     <link href="/style.css" rel="stylesheet"/>
 </head>
 <body>
-<h1>Spring Authorization Server</h1>
+<h1>Local Authorization Server</h1>
 <div class="content login">
     <h2>Sign in</h2>
     <div class="alert error" th:if="${param.error}">Error signing in</div>
